--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,6 @@
 profile {
-
+    .content-ios {
+        color: #000;
+        background-image: url('https://unsplash.it/g/1500/800?random');
+    }
 }
