--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,6 +1,8 @@
-profile {
-    .content-ios {
-        color: #000;
-        background-image: url('https://unsplash.it/g/1500/800?random');
-    }
+page-profile-settings {
+  .username {
+    font-size: 1.3em;
+  }
+  .label {
+    color: #7f7f7f;
+  }
 }
